# geneticalpy

./: README.md  pyproject.toml
genetical/: examples.py  genetical.py
geneticalpy/: genetical.py
tutorial/: tutorial.ipynb
