[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geneticalpy"
version = "0.1.0"
description = "GeneticAlPy - Genetic Algorithms with Python"
authors = [
  { name = "Parth Nayak", email = "parth3e8@gmail.com" }
]
dependencies = [
  # List any runtime dependencies here
  "numpy",
  "pyyaml",
  "tqdm",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
]

[tool.setuptools]
packages = ["geneticalpy"]

[tool.setuptools.package-dir]
"" = "."